--------------------------------------------------------------------------------
Changes for 2.3.0

New features:
A.F....... [ZBXNEXT-2123] implemented the application and host inventory filters on the trigger monitoring page (Pavels)
A.F.I...S. [ZBXNEXT-2117] added support of the new "Description" field for templates, hosts and proxies (Eduard, Sasha)
..F.I..... [ZBXNEXT-1533] added "Action name" in "History of actions" screen and added patch to changed screen item sort order (Oleg, Pavels)
..F....... [ZBX-7850] unified the "Go to" section of host pop-up menus displayed in maps and other other places (Ivo)
..F....... [ZBXNEXT-421] implemented user name in action audit page (Eduard)
..F....... [ZBXNEXT-2167] improved info column in latest data monitoring and item, trigger, discovery host configuration (Eduard)
..F....... [ZBX-6374] added pagination in availability reports (Oleg)
..F....... [ZBXNEXT-1533] added "Action name" in Audit->Action log (Oleg)
...G...... [ZBX-7742] added error message upon encountering trailing data for zabbix_sender when reading from file (Juris)
A.F.I...S. [ZBXNEXT-581] implemented the ability to filter by multiple LLD macros (Pavels, wiper)
..F....... [ZBX-7361] implemented alphabetic host ordering when trigger has many hosts (Ivo)
..F....... [ZBXNEXT-1632] added goto graphs link in host menu popup (Eduard)
..F....... [ZBXNEXT-1735] removed graph and history link from items in latest data page, if history and trends are disabled (Oleg)
..F....... [ZBXNEXT-1910] added active since and active till columns in maintenance page (Eduard)
..F....... [ZBX-7095] added 'Cancel' button in dashboard configuration (Ivo)
..F....... [ZBXNEXT-2140] enabled Monitoring -> Latest data filter option "Show items without data" by default (Richlv)
..F....... [ZBX-7713] changed the event details page to display all hosts used in a trigger (Ivo)
........S. [ZBXNEXT-1700] added informative messages about database connection restoration (Juris)